git commit -m "Some fixes applied"